welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: not found: type Direction
    setDirection(Direction.EAST:Direction)
                                ^DwarfCode:7: error: not found: value Direction
    setDirection(Direction.EAST:Direction)
                 ^DwarfCode:10: error: not found: type Direction
    setDirection(Direction.WEST:Direction)
                                ^DwarfCode:10: error: not found: value Direction
    setDirection(Direction.WEST:Direction)
                 ^DwarfCode:11: error: value unary_! is not a member of Int
    while ((!estSurBiscuit()) && (!getX()==0)) avance()
                                  ^